tests/rosetta/out/Smalltalk/conways-game-of-life.out
/tmp/conways-game-of-life.st:9: parse error, expected ']'
